# langchain

RAG/documentation-helper/: ingestion.py  main.py
RAG/documentation-helper/backend/: core.py
RAG/intro-to-vector-dbs/: ingestion.py  main.py  mediumblog1.txt  pyproject.toml
RAG/vectorstor-in-memory/: Pipfile  main.py
RAG/vectorstor-in-memory/faiss_index_react/: index.faiss  index.pkl
ReAct-Agent-LangGraph/: main.py  nodes.py  pyproject.toml  react.py
ReAct-search-agent/: main.py  prompt.py  pyproject.toml  schemas.py
code-interpreter/: Pipfile  main.py
function calling/: main.py  pyproject.toml
langchain-course/: main.py  pyproject.toml
langgraph-course/: ingestion.py  main.py  pyproject.toml
langgraph-course/.chroma/: chroma.sqlite3
langgraph-course/graph/: graph.py  state.py
langgraph-course/graph/chains/: generation.py  retrieval_grader.py  router.py
langgraph-course/graph/chains/tests/: test_chains.py
langgraph-course/graph/chains/tests/.chroma/: chroma.sqlite3
langgraph-course/graph/nodes/: __init__.py  generate.py  grade_documents.py  retrieve.py  web_search.py
mcp-implementation/: langchain_client.py  main.py  pyproject.toml
mcp-implementation/server/: math_server.py
reflection-agent/: chains.py  main.py  pyproject.toml
reflexion-agent/: chains.py  main.py  pyproject.toml  schemas.py  tool_executor.py
